package entidades;

public class Autenticacion {
}
