package entidades;

public class CountDownLatch {
}
