package entidades;

public class CyclicBarrier {
}
