package entidades;

public class DatabaseService {
}
