package entidades;

public class Dataset {

}
