package entidades;

public class SyncManager {
}
